--- a/src/pages/reportform/reportform.html
+++ b/src/pages/reportform/reportform.html
@@ -50,7 +50,7 @@
             </label>
         </div>
         <div class="head-bom">
-            <button class="form-control btn btn-primary" style="max-width: 80px;" ng-click="generate()">生成报表</button>
+            <button class="form-control btn btn-primary btn_style" style="max-width: 80px;" ng-click="generate()">生成报表</button>
         </div>
     </div>
     <div class="main">
@@ -129,5 +129,11 @@
     <div class="echarts">
         <!-- 未处理告警 -->
         <div id="untreatedalarm_report"></div>
+        <!-- // 柱状图-威胁应用协议 -->
+        <div id="application_protocol"></div>
+        <!-- 告警趋势 -->
+        <div id="alert_trend"></div>
+        <!-- 威胁类型 -->
+        <div id="alert_type"></div>
     </div>
 </div>
