--- a/src/pages/safety_size/safety_size.html
+++ b/src/pages/safety_size/safety_size.html
@@ -31,7 +31,7 @@
 
                             <div class="form-group col-md-1">
                                 <label style="width: 100%;">&nbsp;</label>
-                                <button class="form-control btn btn-primary" style="max-width: 80px;" ng-click="search()">搜&nbsp;索</button>
+                                <button class="form-control btn btn-primary btn_style" style="max-width: 80px;" ng-click="search()">搜&nbsp;索</button>
                             </div>
                             <div class="download_position ">
                                 <span>
@@ -42,14 +42,14 @@
                         <div class="row margin">
                             <table class="table table-hover ng-cloak">
                                 <tr>
-                                    <th>时间</th>
+                                    <th style="width: 270px;" >时间</th>
                                     <th>主机IP</th>
                                     <th>流量</th>
                                     <th>链接时长</th>
                                     <th>应用</th>
                                 </tr>
                                 <tr style="cursor: pointer;" ng-repeat="item in pages.data.data" ng-click="detail(item)">
-                                    <td class="td_content" ng-bind="item.timestamp"></td>
+                                    <td class="td_content"  ng-bind="item.timestamp"></td>
                                     <td class="td_content" ng-bind="item.host_ip"></td>
                                     <td class="td_content" ng-bind="item.flow_bytes"></td>
                                     <td class="td_content" ng-bind="item.flow_duration"></td>
@@ -96,8 +96,6 @@
                                     </li>
                                 </ul>
                             </div>
-
-
                         </div>
                     </div>
                 </div>
