--- a/src/pages/set_email/set_email.html
+++ b/src/pages/set_email/set_email.html
@@ -72,11 +72,11 @@
                 <div class="row">
                     <div class="form-group col-md-2 col-md-offset-4">
                         <label style="width: 100%;">&nbsp;</label>
-                        <button class="form-control btn btn-primary" style="max-width: 108px;" ng-click="test_email()">发送测试邮件</button>
+                        <button class="form-control btn btn-primary btn_style" style="max-width: 108px;" ng-click="test_email()">发送测试邮件</button>
                     </div>
                     <div class="form-group col-md-1">
                         <label style="width: 100%;">&nbsp;</label>
-                        <button class="form-control btn btn-primary" style="max-width: 80px;" ng-click="save()">保&nbsp;存</button>
+                        <button class="form-control btn btn-primary btn_style" style="max-width: 80px;" ng-click="save()">保&nbsp;存</button>
                     </div>
                 </div>
             </div>
