--- a/src/pages/set_licence/set_licence.html
+++ b/src/pages/set_licence/set_licence.html
@@ -11,10 +11,10 @@
                             </div>
                             <input type="file" id="LicenseFile" name="" style="display: none;">
                             <div class="form-group col-md-2 col-md-offset-6 form_class">
-                                <button class="form-control btn btn-primary" style="max-width: 93px;margin-top: 3px;" ng-click="online()">在线激活</button>
+                                <button class="form-control btn btn-primary btn_style" style="max-width: 93px;margin-top: 3px;" ng-click="online()">在线激活</button>
                             </div>
                             <div class="form-group col-md-2  form_class">
-                                <button class="form-control btn btn-primary" style="max-width: 93px;margin-top: 3px;" ng-click="import()">导入许可证</button>
+                                <button class="form-control btn btn-primary btn_style" style="max-width: 93px;margin-top: 3px;" ng-click="import()">导入许可证</button>
                             </div>
                         </div>
                         <div id="hide_box" style="display: none;">
