--- a/src/pages/set_user/set_user.html
+++ b/src/pages/set_user/set_user.html
@@ -84,7 +84,6 @@
                                                 </li>
                                             </ul>
                                         </div>
-                                        <!-- /.angularjs分页 -->
                                     </div>
                                 </div>
                             </div>
@@ -112,8 +111,8 @@
                                             <label for="InputVersion">角色：</label>
                                             <!-- <input name='UserRole' type='radio' id="isshare" ng-checked="newUser.role == 'share'" ng-click="newUser.role = 'share';" style="margin: 4px 4px 4px 15px" /> -->
                                             <!-- <label for="isshare">共享用户</label> -->
-                                            <input name='UserRole' type='radio' id="isuser" ng-checked="newUser.role == 'user'" ng-click="newUser.role = 'user';" style="margin: 4px 4px 4px 15px"
-                                            />
+                                            <input name='UserRole' type='radio' id="isuser" ng-checked="newUser.role == 'user'" 
+                                            ng-click="newUser.role = 'user';" style="margin: 4px 4px 4px 15px" />
                                             <label for="isuser">普通用户</label>
                                             <input name='UserRole' type='radio' id="isadmin" ng-checked="newUser.role == 'admin'" ng-click="newUser.role = 'admin';"
                                                 style="margin: 4px 4px 4px 15px" />
