--- a/tpl/blocks/nav.html
+++ b/tpl/blocks/nav.html
@@ -138,7 +138,7 @@
             </li>
             <li ui-sref-active="active">
                 <a ui-sref="app.set_black_list">
-                    <span>黑白名单</span>
+                    <span>白名单</span>
                 </a>
             </li>
             <li ui-sref-active="active">
@@ -156,6 +156,11 @@
                     <span>规则库更新</span>
                 </a>
             </li>
+            <li ui-sref-active="active">
+                    <a ui-sref="app.set_yara">
+                        <span>YARA规则</span>
+                    </a>
+                </li>
             <li ui-sref-active="active">
                 <a ui-sref="app.set_email">
                     <span>邮件通知</span>
