--- a/src/pages/alarm/alarm.html
+++ b/src/pages/alarm/alarm.html
@@ -37,7 +37,7 @@
                             </div>
                             <div class="form-group col-md-1">
                                 <label style="width: 100%;">&nbsp;</label>
-                                <button class="form-control btn btn-primary" style="max-width: 80px;" ng-click="search()">搜&nbsp;索</button>
+                                <button class="form-control btn btn-primary btn_style" style="max-width: 80px;" ng-click="search()">搜&nbsp;索</button>
                             </div>
                             <div class="download_position ">
                                 <span>
@@ -48,23 +48,23 @@
                         <div class="row margin">
                             <table class="table table-hover ng-cloak">
                                 <tr>
-                                    <th>告警类型</th>
                                     <th>时间</th>
-                                    <th>告警等级</th>
+                                    <th>告警类型</th>
+                                    <th>告警描述</th>
                                     <th>源地址</th>
                                     <th>目的地址</th>
-                                    <th>告警描述</th>
                                     <th>应用</th>
+                                    <th>告警等级</th>
                                     <th> 状态</th>
                                 </tr>
                                 <tr style="cursor: pointer;" ng-repeat="item in pages.data" ng-click="detail(item)">
-                                    <td ng-bind="item.alert_type"></td>
                                     <td ng-bind="item.alert_time*1000 |date:'yyyy-MM-dd HH:mm:ss'"></td>
-                                    <td ng-bind="item.degree"></td>
+                                    <td ng-bind="item.alert_type"></td>
+                                    <td ng-bind="item.alert_description"></td>
                                     <td ng-bind="item.src_ip"></td>
                                     <td ng-bind="item.dest_ip"></td>
-                                    <td ng-bind="item.alert_description"></td>
                                     <td ng-bind="item.application"></td>
+                                    <td ng-bind="item.degree"></td>
                                     <td class="overflow_alarm">
                                         <div class="btn-group {{(ariaID == item.id)?'open':''}}">
                                             <button type="button" class="btn btn-{{status_str[item.status].css}} btn-xs dropdown-toggle" data-toggle="dropdown" aria-expanded="false"
