--- a/src/pages/safety_host/safety_host.html
+++ b/src/pages/safety_host/safety_host.html
@@ -22,7 +22,7 @@
                             </div>
                             <div class="form-group col-md-1">
                                 <label style="width: 100%;">&nbsp;</label>
-                                <button class="form-control btn btn-primary" style="max-width: 80px;" ng-click="search()">搜&nbsp;索</button>
+                                <button class="form-control btn btn-primary btn_style" style="max-width: 80px;" ng-click="search()">搜&nbsp;索</button>
                             </div>
                             <div class="download_position ">
                                 <span>
