--- a/src/pages/set_net_ip/set_net_ip.html
+++ b/src/pages/set_net_ip/set_net_ip.html
@@ -18,7 +18,7 @@
                             <input type="text" class="form-control item_input"  placeholder="" ng-model="net_ip_mask">
                         </div>
                         <div class="col-sm-1">
-                            <button class="form-control btn btn-primary" style="max-width: 80px;" ng-click="add()">添&nbsp;加</button>
+                            <button class="form-control btn btn-primary btn_style" style="max-width: 80px;" ng-click="add()">添&nbsp;加</button>
                         </div>
                     </div>
                 </div>
