--- a/src/pages/set_rule/set_rule.html
+++ b/src/pages/set_rule/set_rule.html
@@ -3,20 +3,27 @@
     <div class="row">
         <div class="col-md-12 ">
             <div class="set_content">
+       
                 <div class="rule_item">
                     <div class="rule_item_header row">
                         <h4 class="col-md-1" style="min-width:150px">实时更新</h4>
                     </div>
+                    <div style="margin: 20px 20px 0px 20px">
+                        <span>点击更新按钮，实时更新规则库。</span>
+                    </div>
                     <div class="row">
                         <div class="form-group col-md-1 col-md-offset-5">
                             <label style="width: 100%;">&nbsp;</label>
-                            <button class="form-control btn btn-primary" style="max-width: 80px;" ng-click="real_time_update()">更&nbsp;新</button>
+                            <button class="form-control btn btn-primary btn_style" style="max-width: 80px;" ng-click="real_time_update()">更&nbsp;新</button>
                         </div>
                     </div>
                 </div>
                 <div class="rule_item">
                     <div class="rule_item_header row">
                         <h4 class="col-md-1" style="min-width:150px">离线更新</h4>
+                    </div>
+                    <div style="margin: 20px 20px 0px 20px">
+                        <span>上传文件成功后，点击更新按钮，离线更新规则库。</span>
                     </div>
                     <div style="margin:20px">
                         <div class="input-file">
@@ -27,15 +34,14 @@
                             </form>
                         </div>
                         <div ng-show="progress_if" class="progress progress-striped active" style="margin: 20px 0;border-radius: 5px;width: 300px">
-                            <div class="progress-bar progress-bar-success" id="progress" role="progressbar" 
-                               aria-valuenow="60" aria-valuemin="0" aria-valuemax="100" >
+                            <div class="progress-bar progress-bar-success" id="progress" role="progressbar" aria-valuenow="60" aria-valuemin="0" aria-valuemax="100">
                             </div>
-                         </div>
+                        </div>
                     </div>
                     <div class="row">
                         <div class="form-group col-md-1 col-md-offset-5">
                             <label style="width: 100%;">&nbsp;</label>
-                            <button class="form-control btn btn-primary" style="max-width: 80px;" ng-click="offline_update()">更&nbsp;新</button>
+                            <button class="form-control btn btn-primary btn_style" ng-disabled="offline_update_button" style="max-width: 80px;" ng-click="offline_update()">更&nbsp;新</button>
                         </div>
                     </div>
                 </div>
