--- a/src/pages/signin/signin.html
+++ b/src/pages/signin/signin.html
@@ -20,7 +20,7 @@
                     <input type="password" placeholder="密码" class="form-control no-border" ng-model="user.password" required>
                 </div>
             </div>
-            <button type="submit" class="btn btn-lg btn-primary btn-block" ng-click="login()" ng-disabled='form.$invalid'>登 录</button>
+            <button type="submit" class="btn btn-lg btn-primary btn-block btn_style" ng-click="login()" ng-disabled='form.$invalid'>登 录</button>
         </form>
         <!-- 未注册 -->
         <form name="form" class="form-validation" ng-if="login_show">
@@ -39,7 +39,7 @@
                     <input type="password" placeholder="确认密码" maxlength="30" class="form-control no-border" ng-model="creat.repassword" required>
                 </div>
             </div>
-            <button type="submit" class="btn btn-lg btn-primary btn-block" ng-click="creat_admin()" ng-disabled='form.$invalid'>创建管理员</button>
+            <button type="submit" class="btn btn-lg btn-primary btn-block btn_style" ng-click="creat_admin()" ng-disabled='form.$invalid'>创建管理员</button>
         </form>
     </div>
 
