--- a/src/pages/alarm/alarm.html
+++ b/src/pages/alarm/alarm.html
@@ -48,7 +48,8 @@
                         <div class="row margin">
                             <table class="table table-hover ng-cloak">
                                 <tr>
-                                    <th>时间</th>
+                                    <th style="width:40px">序号</th>
+                                    <th style="width:145px">时间</th>
                                     <th>告警类型</th>
                                     <th>告警描述</th>
                                     <th>源地址</th>
@@ -58,8 +59,9 @@
                                     <th> 状态</th>
                                 </tr>
                                 <tr style="cursor: pointer;" ng-repeat="item in pages.data" ng-click="detail(item)">
+                                        <td ng-bind="$index + 1 + index_num">1</td>
                                     <td ng-bind="item.alert_time*1000 |date:'yyyy-MM-dd HH:mm:ss'"></td>
-                                    <td ng-bind="item.alert_type"></td>
+                                    <td ng-bind="item.category"></td>
                                     <td ng-bind="item.alert_description"></td>
                                     <td ng-bind="item.src_ip"></td>
                                     <td ng-bind="item.dest_ip"></td>
