--- a/src/pages/set_user/set_user.html
+++ b/src/pages/set_user/set_user.html
@@ -27,7 +27,7 @@
                                                 <th>操作</th>
                                             </tr>
                                             <tr style="cursor: pointer;" ng-repeat="item in pages.data">
-                                                <td style="text-align: center;" ng-bind="$index+1">1</td>
+                                                <td style="text-align: center;" ng-bind="$index + 1 + index_num">1</td>
                                                 <td ng-bind="item.username">admin</td>
                                                 <td ng-bind="item.role">admin</td>
                                                 <td ng-bind="item.creatorname"></td>
