--- a/src/pages/reportform/reportform.html
+++ b/src/pages/reportform/reportform.html
@@ -57,17 +57,18 @@
         <table class="table table-striped ng-cloak">
             <thead>
                 <tr>
-                    <!-- <th>序号</th> -->
-                    <th style="width:20%">日期</th>
-                    <th style="width:25%">名称</th>
-                    <th style="width:25%">时间范围</th>
-                    <th style="width:10%">格式</th>
-                    <th style="width:10%">下载</th>
-                    <th style="width:10%">操作</th>
+                    <th style="width:40px">序号</th>
+                    <th>日期</th>
+                    <th>名称</th>
+                    <th>时间范围</th>
+                    <th>格式</th>
+                    <th>下载</th>
+                    <th>操作</th>
                 </tr>
             </thead>
             <tbody>
                 <tr ng-repeat="item in dataInfo">
+                    <td ng-bind="$index + 1 + index_num">1</td>
                     <td ng-bind="item.create_time">2018-05-09</td>
                     <td ng-bind="item.report_name">月报</td>
                     <td>
