--- a/src/pages/safety_direction/safety_direction.html
+++ b/src/pages/safety_direction/safety_direction.html
@@ -18,9 +18,8 @@
                             </div>
                             <div class="form-group col-md-3">
                                 <label>流量方向</label>
-                                <select class="form-control input_radius" style="background-color: #fff;" 
-                                ng-init="direction.flow_direction=0"
-                                ng-model="direction.flow_direction" ng-options="x.num as x.type for x in statusData"></select>
+                                <select class="form-control input_radius" style="background-color: #fff;" ng-init="direction.flow_direction=0" ng-model="direction.flow_direction"
+                                    ng-options="x.num as x.type for x in statusData"></select>
                             </div>
                             <div class="form-group col-md-2">
                                 <label>主机IP</label>
@@ -39,7 +38,8 @@
                         <div class="row margin">
                             <table class="table table-hover ng-cloak">
                                 <tr>
-                                    <th>时间</th>
+                                    <th style="width:40px">序号</th>
+                                    <th style="width:270px;">时间</th>
                                     <th>主机IP</th>
                                     <th>流量</th>
                                     <th>流量方向</th>
@@ -47,6 +47,7 @@
                                     <th>应用</th>
                                 </tr>
                                 <tr style="cursor: pointer;" ng-repeat="item in pages.data.data" ng-click="detail(item)">
+                                    <td ng-bind="$index + 1 + index_num">1</td>
                                     <td class="td_content" ng-bind="item.timestamp"></td>
                                     <td class="td_content" ng-bind="item.host_ip"></td>
                                     <td class="td_content" ng-bind="item.flow_bytes"></td>
