--- a/src/pages/set_black_list/set_black_list.html
+++ b/src/pages/set_black_list/set_black_list.html
@@ -10,10 +10,10 @@
                                 <h4>白名单</h4>
                             </div>
                             <div class="form-group col-md-2 col-md-offset-7 form_class">
-                                <button class="form-control btn btn-primary btn_style" style="max-width: 93px;margin-top: 3px;" ng-click="search()">添加白名单</button>
+                                <button class="form-control btn btn-primary btn_style" style="max-width: 93px;margin-top: 3px;" ng-click="add()">添加白名单</button>
                             </div>
                             <div class="form-group col-md-2  form_class">
-                                <button class="form-control btn btn-primary btn_style" style="max-width: 93px;margin-top: 3px;" ng-click="search()">批量导入</button>
+                                <button class="form-control btn btn-primary btn_style" style="max-width: 93px;margin-top: 3px;" ng-click="import()">批量导入</button>
                             </div>
                         </div>
                         <div class="box box-solid" style="margin-top:10px;">
@@ -26,27 +26,15 @@
                                                 <th>指标</th>
                                                 <th>类型</th>
                                                 <th>创建时间</th>
-                                                <th>更新时间</th>
                                                 <th>操作</th>
                                             </tr>
-                                            <tr>
-                                                <td>1</td>
-                                                <td>f34a9d6df5c26f311c6cb3cc5fbd4186</td>
-                                                <td>f34a9d6df5c26f311c6cb3cc5fbd4186</td>
-                                                <td>2018-05-08 10:32</td>
-                                                <td>2018-05-08 10:47</td>
+                                            <tr ng-repeat="item in pages0.data">
+                                                <td ng-bind="$index + 1 + index_num">1</td>
+                                                <td ng-bind="item.indicator">f34a9d6df5c26f311c6cb3cc5fbd4186</td>
+                                                <td ng-bind="item.alert_type">f34a9d6df5c26f311c6cb3cc5fbd4186</td>
+                                                <td ng-bind="item.create_time">2018-05-08 10:32</td>
                                                 <td class="cursor">&nbsp;&nbsp;
-                                                    <img src="../src/images/icos/delate.png" ng-click="del(item.id)" width="16" height="16" alt="">
-                                                </td>
-                                            </tr>
-                                            <tr>
-                                                <td>2</td>
-                                                <td>f34a9d6df5c26f311c6cb3cc5fbd4186</td>
-                                                <td>f34a9d6df5c26f311c6cb3cc5fbd4186</td>
-                                                <td>2018-05-08 10:32</td>
-                                                <td>2018-05-08 10:47</td>
-                                                <td class="cursor">&nbsp;&nbsp;
-                                                    <img src="../src/images/icos/delate.png" ng-click="del(item.id)" width="16" height="16" alt="">
+                                                    <img src="../src/images/icos/delate.png" ng-click="del(item)" width="16" height="16" alt="">
                                                 </td>
                                             </tr>
                                         </table>
@@ -96,6 +84,34 @@
                             </div>
                         </div>
                     </div>
+                </div>
+                <!-- 弹窗 -->
+                <div style="display: none;" id="hideenBox">
+                    <div id="newUser">
+                        <form>
+                            <div class="box-body">
+                                <div class=" {{nameerror ? 'has-error':''}}">
+                                    <label for="InputVersion">指标：</label>
+                                    <input class="form-control" ng-model="white_list.indicator">
+                                </div>
+                                <br>
+                                <div class=" {{passworderror ? 'has-error':''}}">
+                                    <label for="InputVersion">类型：</label>
+                                    <select ng-init="white_list.alert_type = type_list[0]" class="form-control input_radius" style="background-color: #fff;"
+                                        ng-model="white_list.alert_type" ng-options="x for x in type_list">
+                                    </select>
+                                </div>
+                            </div>
+                        </form>
+                    </div>
+                </div>
+                <!-- 上传文件 -->
+                <div class="input-file" style="display: none">
+                    <form id="upload" method="post" enctype="multipart/form-data">
+                        <input type="text" id="avatval" placeholder="请选择文件···" readonly="readonly" style="vertical-align: middle;" />
+                        <input type="file" name="file" id="avatar" />
+                        <button ng-click="uploadPic()" class="btn btn-primary upload_button" ng-disabled="upload_true" id="avatsel1">上传文件</button>
+                    </form>
                 </div>
             </div>
         </div>
