--- a/src/pages/set_net/set_net.html
+++ b/src/pages/set_net/set_net.html
@@ -60,7 +60,7 @@
                     <!-- <div class="row" ng-if="net.type.enable == 'yes'"> -->
                         <div class="form-group col-md-1 col-md-offset-5">
                             <label style="width: 100%;">&nbsp;</label>
-                            <button class="form-control btn btn-primary btn_style" style="max-width: 80px;" ng-click="keep()">保&nbsp;存</button>
+                            <button class="form-control btn btn-primary btn_style" style="max-width: 80px;" ng-click="set_network()">保&nbsp;存</button>
                         </div>
                     </div>
                 </div>
