--- a/src/pages/set_net_ip/set_net_ip.html
+++ b/src/pages/set_net_ip/set_net_ip.html
@@ -35,7 +35,7 @@
                                         <th>操作</th>
                                     </tr>
                                     <tr ng-repeat="item in pages.data">
-                                        <td ng-bind="$index+1">1</td>
+                                            <td ng-bind="$index + 1 + index_num">1</td>
                                         <td ng-bind="item.ip_segment"></td>
                                         <td ng-bind="item.net_mask"></td>
                                         <td class="cursor">&nbsp;&nbsp;
